Finished Welcome page

--- a/app/src/main/res/layout/welcome.xml
+++ b/app/src/main/res/layout/welcome.xml
@@ -10,24 +10,30 @@
         android:id="@+id/textView"
         android:layout_width="325dp"
         android:layout_height="52dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="100dp"
         android:text="Welcome to BuzzTracker"
         android:textSize="28sp"
-        tools:layout_editor_absoluteX="27dp"
-        tools:layout_editor_absoluteY="117dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/sign_in"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="43dp"
+        android:layout_marginBottom="168dp"
+        android:layout_marginStart="64dp"
         android:text="Sign In"
-        tools:layout_editor_absoluteX="71dp"
-        tools:layout_editor_absoluteY="293dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Sign In"
-        tools:layout_editor_absoluteX="234dp"
-        tools:layout_editor_absoluteY="293dp" />
+        android:layout_marginBottom="168dp"
+        android:layout_marginEnd="68dp"
+        android:text="Register"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 </android.support.constraint.ConstraintLayout>
