--- a/BuzzTracker/app/src/main/res/layout/activity_locations_list.xml
+++ b/BuzzTracker/app/src/main/res/layout/activity_locations_list.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent">
 
     <ListView
-        android:id="@+id/LocationsList"
+        android:id="@+id/LocationList"
         android:layout_width="368dp"
         android:layout_height="495dp"
         android:layout_marginStart="8dp"
