--- a/BuzzTracker/app/src/main/res/layout/activity_location_description.xml
+++ b/BuzzTracker/app/src/main/res/layout/activity_location_description.xml
@@ -25,6 +25,22 @@
         android:text="Return to Locations"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.122"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/location_description_view"
+        app:layout_constraintVertical_bias="0.333" />
+
+    <Button
+        android:id="@+id/add_donation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="Add Donation"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/locations_button"
         app:layout_constraintTop_toBottomOf="@+id/location_description_view" />
 </android.support.constraint.ConstraintLayout>
