--- a/BuzzTracker/app/src/main/res/layout/activity_location_description.xml
+++ b/BuzzTracker/app/src/main/res/layout/activity_location_description.xml
@@ -8,8 +8,8 @@
 
     <ListView
         android:id="@+id/location_description_view"
-        android:layout_width="368dp"
-        android:layout_height="450dp"
+        android:layout_width="362dp"
+        android:layout_height="398dp"
         android:layout_marginStart="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -25,10 +25,10 @@
         android:text="Return to Locations"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.122"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/location_description_view"
-        app:layout_constraintVertical_bias="0.333" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/add_donation"
@@ -41,6 +41,22 @@
         android:text="Add Donation"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.555"
         app:layout_constraintStart_toEndOf="@+id/locations_button"
+        app:layout_constraintTop_toBottomOf="@+id/location_description_view"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <Button
+        android:id="@+id/donation_list_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="Donation List"
+        app:layout_constraintBottom_toTopOf="@+id/add_donation"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/location_description_view" />
 </android.support.constraint.ConstraintLayout>
