--- a/BuzzTracker/app/src/main/res/layout/activity_search_view.xml
+++ b/BuzzTracker/app/src/main/res/layout/activity_search_view.xml
@@ -24,12 +24,12 @@
         android:id="@+id/search_edit_text"
         android:layout_width="wrap_content"
         android:layout_height="48dp"
-        android:layout_marginBottom="20dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="20dp"
         android:ems="10"
+        android:hint="Search"
         android:inputType="text"
-        android:text="Search"
         app:layout_constraintBottom_toTopOf="@+id/category_spinner"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.169"
