--- a/BuzzTracker/app/src/main/res/layout/activity_map.xml
+++ b/BuzzTracker/app/src/main/res/layout/activity_map.xml
@@ -17,6 +17,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Back to List"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="parent"
         tools:layout_editor_absoluteX="279dp"
         tools:layout_editor_absoluteY="446dp" />
 </android.support.constraint.ConstraintLayout>
