Added to webapp index and login

--- a/WebApp/BuzzTracker/views/index.pug
+++ b/WebApp/BuzzTracker/views/index.pug
@@ -13,7 +13,7 @@ html
                 Greetings from BuzzTracker
     div.main
         div.button.container
-            button(width=100, onclick="window.location.href='/login'").
+            button(width=100, onclick="window.location.href='/routes/login'").
                 Login
             button(width=100, onclick="/register").
                 Register
