--- a/BuzzTracker/app/src/main/res/layout/activity_location_description.xml
+++ b/BuzzTracker/app/src/main/res/layout/activity_location_description.xml
@@ -22,13 +22,13 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Return to Locations"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/location_description_view"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="1.0"
+        tools:text="Return to Locations" />
 
     <Button
         android:id="@+id/add_donation"
@@ -38,13 +38,13 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Add Donation"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.555"
         app:layout_constraintStart_toEndOf="@+id/locations_button"
         app:layout_constraintTop_toBottomOf="@+id/location_description_view"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="1.0"
+        tools:text="Add Donation" />
 
     <Button
         android:id="@+id/donation_list_button"
@@ -54,9 +54,9 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Donation List"
         app:layout_constraintBottom_toTopOf="@+id/add_donation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/location_description_view" />
+        app:layout_constraintTop_toBottomOf="@+id/location_description_view"
+        tools:text="Donation List" />
 </android.support.constraint.ConstraintLayout>
