--- a/BuzzTracker/app/src/main/res/layout/activity_search_results_view.xml
+++ b/BuzzTracker/app/src/main/res/layout/activity_search_results_view.xml
@@ -26,12 +26,12 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Back"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.078"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintVertical_bias="0.674" />
+        tools:text="Back"
 
     <TextView
         android:id="@+id/empty_view"
@@ -39,13 +39,13 @@
         android:layout_height="match_parent"
         android:gravity="center"
         android:textAlignment="center"
+        android:textSize="36sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0"
-        android:textSize="36sp"
-        android:text="No such item found. Go back to try again" />
+        tools:text="No such item found. Go back to try again." />
 
 </android.support.constraint.ConstraintLayout>
