--- a/BuzzTracker/app/src/main/res/layout/activity_map.xml
+++ b/BuzzTracker/app/src/main/res/layout/activity_map.xml
@@ -16,14 +16,14 @@
         android:id="@+id/back_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:text="Back to List"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.034"
-        tools:text="Back to List"/>
+        tools:text="Back to List" />
 </android.support.constraint.ConstraintLayout>
