--- a/BuzzTracker/app/src/main/res/layout/welcome.xml
+++ b/BuzzTracker/app/src/main/res/layout/welcome.xml
@@ -12,6 +12,7 @@
         android:layout_height="52dp"
         android:layout_marginStart="40dp"
         android:layout_marginTop="100dp"
+        android:text="Welcome to BuzzTracker"
         android:textSize="28sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -23,6 +24,7 @@
         android:layout_height="43dp"
         android:layout_marginBottom="168dp"
         android:layout_marginStart="64dp"
+        android:text="Sign In"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:text="Sign In" />
@@ -33,6 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="168dp"
         android:layout_marginEnd="68dp"
+        android:text="Register"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         tools:text="Register" />
